--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>admin-app</title>
+  <title>Master SSEA</title>
 </head>
 
 <body>
